--- a/hometown.html
+++ b/hometown.html
@@ -43,7 +43,11 @@ body {
     </div>
 
     <div class="card">
-      <img src="kampung.jpg" alt="My Kampung">
+  <video width="320" height="240" autoplay muted controls>
+    <source src="kampung.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+
       <h3>🏡 Kampung Vibes</h3>
       <p>My kampung in Mersing is filled with beautiful memories of childhood — playing with cousins, enjoying traditional food, and feeling nature all around.</p>
     </div>
